--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".NoteDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Noteit" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false"
             android:theme="@style/Theme.Noteit_no_action_bar" />
